# Real-time-strategy-game

./: .gitignore  README.md  specification.tex
client/: .syncthing.client.go.tmp  .syncthing.client_util.go.tmp  .syncthing.main.go.tmp  Makefile  aregarderplustard  client.go  client_client.go  client_server.go  client_to_server.go  client_util.go  go.mod  go.sum  main.go  test.m4a  test.opus  testest
client/conf/: conf.json  menus.json
client/src/: chat.go  client.go  client_to_server.go  client_util.go  configuration.go  gui.go  main.go  map_util.go  menus.go  player_interactions.go  server_to_client.go
client/src/keyConfigurator/: keyConfigurator.go
events/: event_util.go  go.mod
factory/: factory.go  go.mod
map_builder/: Makefile  go.mod  map.json
map_builder/src/: main.go  map_util.go
maps/: map.json  map2.json  map3.json  map4.json
minimal_server/: Cargo.toml  Makefile  go.mod
minimal_server/conf/: conf.json  topological_tree.conf
minimal_server/src/: build.go  client_handler.go  configuration.go  main.go  main.rs  map_util.go  util.go
rust_game_server/: Cargo.toml
rust_game_server/src/: lib.rs  main.rs
server/: Cargo.toml  server.rs
server/rust_game_server/: Cargo.toml
server/rust_game_server/src/: lib.rs
server/src/: lib.rs  main.rs  parse.rs  prepare.rs  server.rs
utils/: go.mod  pathfinding.go  utils.go
