[package]
name = "rts-se"
version = "0.1.0"
authors = ["Antoine GRIMOND", "dsac", "Gabriel JEANTET", "Zibo YANG"]
edition="2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_derive = "1.0.9"
ws = "0.7.3"
